--- a/.htaccess
+++ b/.htaccess
@@ -91,3 +91,170 @@ RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
         Header add Link "</css/critical.css>; rel=preload; as=style"
     </FilesMatch>
 </IfModule>
+
+# Priority Hints for LCP images
+<IfModule mod_headers.c>
+    # Add priority hints for key images
+    <FilesMatch "\.(jpg|jpeg|png|webp)$">
+        Header add Link "rel=preload; as=image; fetchpriority=high"
+    </FilesMatch>
+    
+    # Preload critical images
+    <FilesMatch "index.html">
+        Header add Link "</assets/images/news/breaking-news-placeholder.webp>; rel=preload; as=image"
+        Header add Link "</css/critical.css>; rel=preload; as=style"
+        Header add Link "</js/loader.js>; rel=preload; as=script"
+    </FilesMatch>
+
+    # Optimize resource loading
+    Header set Resource-Priorities "high"
+    Header set Early-Hints "enabled"
+</IfModule>
+
+# Add image optimization rules
+<IfModule mod_rewrite.c>
+    # Serve WebP images if supported
+    RewriteCond %{HTTP_ACCEPT} image/webp
+    RewriteCond %{REQUEST_FILENAME} (.*)\.(jpe?g|png)$
+    RewriteCond %{REQUEST_FILENAME}.webp -f
+    RewriteRule ^(.+)\.(jpe?g|png)$ $1.webp [T=image/webp,L]
+</IfModule>
+
+# Add mod_pagespeed optimization
+<IfModule pagespeed_module>
+    ModPagespeed on
+    ModPagespeedEnableFilters prioritize_critical_css
+    ModPagespeedEnableFilters defer_javascript
+    ModPagespeedEnableFilters local_storage_cache
+    ModPagespeedEnableFilters insert_dns_prefetch
+</IfModule>
+
+
+# Add FastCGI settings
+<IfModule mod_fcgid.c>
+    FcgidIOTimeout 120
+    FcgidInitialEnv PHP_FCGI_MAX_REQUESTS 1000
+</IfModule>
+
+# Optimize Keep-Alive settings
+<IfModule mod_headers.c>
+    Header set Connection keep-alive
+    Header set Keep-Alive "timeout=5, max=100"
+</IfModule>
+
+# Add server performance headers
+<IfModule mod_headers.c>
+    Header set X-DNS-Prefetch-Control "on"
+    Header set X-Content-Type-Options "nosniff"
+    
+    # Cache Control with ETag
+    FileETag MTime Size
+    
+    # Enable HTTP/2 Push for critical assets
+    <FilesMatch "index.html">
+        Header add Link "</css/critical.css>; rel=preload; as=style; nopush"
+        Header add Link "</js/loader.js>; rel=preload; as=script; nopush"
+    </FilesMatch>
+</IfModule>
+
+# Add specific compression for Firebase assets
+<IfModule mod_deflate.c>
+    AddOutputFilterByType DEFLATE application/firebase
+    AddOutputFilterByType DEFLATE application/firestore
+</IfModule>
+
+# Optimize static asset delivery
+<IfModule mod_headers.c>
+    # Critical resources preload
+    <FilesMatch "index.html">
+        Header add Link "</css/critical.css>; rel=preload; as=style"
+        Header add Link "</js/loader.js>; rel=preload; as=script"
+        Header add Link "https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css; rel=preload; as=style"
+        Header add Link "https://www.gstatic.com/firebasejs/10.7.1/firebase-app.js; rel=preload; as=script"
+    </FilesMatch>
+
+    # Static asset caching
+    <FilesMatch "\.(css|js)$">
+        Header set Cache-Control "public, max-age=31536000, immutable"
+        Header set X-Content-Type-Options "nosniff"
+    </FilesMatch>
+    
+    # Firebase specific optimizations
+    <FilesMatch "firebase-.*\.js$">
+        Header set Cache-Control "public, max-age=31536000, immutable"
+        Header set Priority "high"
+    </FilesMatch>
+</IfModule>
+
+# Add CDN preconnect
+<IfModule mod_headers.c>
+    Header add Link "<https://cdn.jsdelivr.net>; rel=preconnect"
+    Header add Link "<https://www.gstatic.com>; rel=preconnect"
+    Header add Link "<https://firebasestorage.googleapis.com>; rel=preconnect"
+</IfModule>
+
+# Remove PHP-specific settings
+<IfModule mod_php.c>
+    php_value opcache.enable 1
+    php_value opcache.memory_consumption 128
+    php_value opcache.interned_strings_buffer 8
+    php_value opcache.max_accelerated_files 4000
+    php_value opcache.revalidate_freq 60
+    php_value opcache.fast_shutdown 1
+    php_value opcache.enable_cli 1
+</IfModule>
+
+# Add FastCGI settings
+<IfModule mod_fcgid.c>
+    FcgidIOTimeout 120
+    FcgidInitialEnv PHP_FCGI_MAX_REQUESTS 1000
+</IfModule>
+
+# Optimize Keep-Alive settings
+<IfModule mod_headers.c>
+    Header set Connection keep-alive
+    Header set Keep-Alive "timeout=5, max=100"
+</IfModule>
+
+# Add server performance headers
+<IfModule mod_headers.c>
+    Header set X-DNS-Prefetch-Control "on"
+    Header set X-Content-Type-Options "nosniff"
+    
+    # Cache Control with ETag
+    FileETag MTime Size
+    
+    # Enable HTTP/2 Push for critical assets
+    <FilesMatch "index.html">
+        Header add Link "</css/critical.css>; rel=preload; as=style; nopush"
+        Header add Link "</js/loader.js>; rel=preload; as=script; nopush"
+    </FilesMatch>
+</IfModule>
+
+# Optimize CSS delivery
+<IfModule mod_headers.c>
+    # Critical CSS preload
+    <FilesMatch "index.html">
+        # Only preload critical Bootstrap components
+        Header add Link "https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap-grid.min.css; rel=preload; as=style"
+        Header add Link "https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap-utilities.min.css; rel=preload; as=style"
+        
+        # Defer non-critical CSS
+        Header add Link "https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.css; rel=preload; as=style; onload=this.rel='stylesheet'"
+        
+        # Local critical CSS
+        Header add Link "</css/critical.css>; rel=preload; as=style"
+    </FilesMatch>
+
+    # Optimize font loading
+    <FilesMatch "bootstrap-icons\.*\.">
+        Header set Cache-Control "public, max-age=31536000, immutable"
+        Header set Priority "low"
+    </FilesMatch>
+</IfModule>
+
+# Add resource hints
+<IfModule mod_headers.c>
+    Header add Link "<https://cdn.jsdelivr.net>; rel=preconnect; crossorigin"
+    Header add Link "<https://fonts.gstatic.com>; rel=preconnect; crossorigin"
+</IfModule>
